@@ -17,6 +17,10 @@ all routing tables is printed.
 .IP "\fBovs/route/del ip/plen [pkt_mark=mark]\fR"
 Delete ip/plen route from OVS routing table.
 .
+.IP "\fBovs/route/rule/show\fR"
+Print routing rules in OVS. This includes routing rules cached from the system
+routing policy database and user configured routing rules.
+.
 .IP "\fBtnl/neigh/show\fR"
 .IP "\fBtnl/arp/show\fR"
 OVS builds ARP cache by snooping are messages. This command shows
